--- a/failure.html
+++ b/failure.html
@@ -4,12 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>OH NO!!</title>
+  <title>Failure</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 <body>
-  <h1>OH NO! Something has gone wrong.</h1>
-  <p>Unfortunately something has gone wrong on our side and we were unable to process your request to subscribe at this time.  If you have attempted more than once and are still seeing this screen please reach out to the developer on Twitter <br>
-    @j3ffjessie.
-  </p>
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">Uh Oh! Something has gone wrong while attempting to subscribe.</h1>
+      <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+
+      <form action="/failure" method="post">
+      <button class="btn btn-lg btn-warning" type="submit" name="button">Try Again!</button>
+      </form>
+    </div>
+  </div>
 </body>
 </html>
