--- a/failure.html
+++ b/failure.html
@@ -13,7 +13,7 @@
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">Uh Oh! Something has gone wrong while attempting to subscribe.</h1>
-      <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+      <p class="lead">Please give us an opportunity to figure out what is going wrong.  Try again please.</p>
 
       <form action="/failure" method="post">
       <button class="btn btn-lg btn-warning" type="submit" name="button">Try Again!</button>
