--- a/failure.html
+++ b/failure.html
@@ -13,7 +13,9 @@
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">Uh Oh! Something has gone wrong while attempting to subscribe.</h1>
-      <p class="lead">Please give us an opportunity to figure out what is going wrong.  Try again please.</p>
+      <p class="lead">This has been intentionally setup to fail by ignoring the API keys for MailChimp.  I did not want to deploy this app and have <br>
+        the ability to gather people's details for no reason.
+      </p>
 
       <form action="/failure" method="post">
       <button class="btn btn-lg btn-warning" type="submit" name="button">Try Again!</button>
